@@ -109,6 +109,31 @@ AC_SUBST(SOUND_LDFLAGS)
 PKG_CHECK_MODULES(MJPEG, mjpegtools)
 AC_SUBST(MJPEG_CFLAGS)
 AC_SUBST(MJPEG_LIBS)
+# check if mjpegtools has 3 arguements for y4m_write_frame_header
+# Note: this test came from transcode...
+save_CFLAGS="$CFLAGS"
+save_LIBS="$LIBS"
+CFLAGS="$CFLAGS $MJPEG_CFLAGS"
+LIBS="$LIBS $MJPEG_LIBS"
+AC_TRY_LINK(
+[
+#include <mjpegtools/yuv4mpeg.h>
+#include <mjpegtools/mpegconsts.h>
+],
+[y4m_write_frame_header(1,NULL,NULL)],
+[
+AC_DEFINE(
+	   [MJPEGTOOLS_Y4M_WRITE_FRAME_HEADER__3ARGS], 
+           [1], 
+           [using mjpegtool's y4m_write_frame_header with 3 arguments]
+          )
+mjpeg_version_info="3 arguments (new versions)"
+],[mjpeg_version_info="assuming 2 arguments (older versions)"])
+AC_MSG_CHECKING([for number of arguments to mjpegtool's y4m_write_frame_header])
+AC_MSG_RESULT($mjpeg_version_info)
+CFLAGS="$save_CFLAGS"
+LIBS="$save_LIBS"
+
 ############## END MJPEGTOOLS
 
 ############## MISC LIBRARIES
